add support for sharing key auth
